--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
 	<title>Yoga</title>
 	
 	<link rel="shortcut icon" type="image/png" href="img/favicon.jpg">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+<!--	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">-->
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/media.css">
+	<script src="dist/js/bundle.js"></script>
 </head>
 <body>
 	<header>
-		<div class="container">
+		<a href="http://coffee-brains.ru/learn/yoga/yoga-old/" class="before">до&#8617;</a>
+		<div class="container-menu">
 			<nav>
 				<ul>
-					<li><a href="#about">О нас</a></li>
-					<li><a href="#photo">Фото</a></li>
-					<li><a href="#price">Стоимость</a></li>
-					<li><a href="#contacts">Контакты</a></li>
+					<li><a href="#about">О НАС</a></li>
+					<li><a href="#photo">ФОТО</a></li>
+					<li><a href="#price">СТОИМОСТЬ</a></li>
+					<li><a href="#contacts">КОНТАКТЫ</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
 	<div class="main">
-		<div class="container">
 			<div class="row">
-				<div class="col-12">
 					<div class="main-block">
 						<div class="main-block-link">
 							Travel.org							
@@ -33,13 +34,8 @@
 						<div class="main-block-title">
 							йога-туры в индию
 						</div>
-						<div class="main-block-descr">
-							океан / йога / путешествия / аюрведа
-						</div>
 					</div>
-				</div>
 			</div>
-		</div>
 	</div>
 	<div class="content">
 		<div class="container" id="about">
@@ -114,6 +110,7 @@
 				</div>
 			</div>
 			<button class="more"> Узнать больше</button>
+			
 			<div class="slider" id="photo">
 				<div class="slider-title">Фото с наших поездок
 				</div>
@@ -148,10 +145,12 @@
 				<div class="counter-block">
 					<div class="counter-block-option">Количество людей</div>
 					<input type="number" min="1" step="1" class="counter-block-input">
+					<div class="min-max">1-20</div>
 				</div>
 				<div class="counter-block">
 					<div class="counter-block-option">На сколько дней</div>
 					<input type="number" min="1" step="1" class="counter-block-input">
+					<div class="min-max">1-14</div>
 				</div>
 				<div class="counter-block">
 					<div class="counter-block-option">Выберете базу</div>
@@ -176,8 +175,8 @@
 					</div>
 					<form id="form">
 						<input required type="email" name="email" placeholder="Ваша почта">
-						<input required type="tel" name="tel" placeholder="Ваш телефон">
-						<button type="submit">Отправить</button>
+						<input id="phone" required type="tel" name="tel" value="+7 (___) ___ - ____" placeholder="+7 (___) ___ - ____">
+						<button type="submit">ОТПРАВИТЬ</button>
 					</form>
 				</div>
 			</div>
@@ -213,8 +212,8 @@
 	 		<div class="popup">
 				<div class="popup-close">&times;
 				</div>
-				<div class="popup-title">
-				Форма обратной связи</div>
+<!--				<div class="popup-title">-->
+<!--				Форма обратной связи</div>-->
 					<div class="popup-form">	
 						<form action="#" class="main-form">
 							<div class="popup-form-header">
@@ -223,14 +222,14 @@
 								<label class="popup-form__label" for="phone">
 								Введите ваш номер телефона:
 								</label>
-								<input class="popup-form__input" name="phone" type="tel" required placeholder="+7(978) 973 33 45">
+								<input class="popup-form__input" name="phone" type="tel" required value="+7 (___) ___ - ____">
 								<button class="button popup-form__btn">
-									Оставить заявку!
+									ОСТАВИТЬ ЗАЯВКУ
 								</button>
 						</form>
 					</div>
 	 		</div>
 	</div>
-	<script src="dist/js/bundle.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
